--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                             </svg>
                         </div>
                         <div class="footer-info-text">
-                            <p>Gurruchaga 2306, Piso 4°, Depto. "A"</p>
+                            <p>Cevallos Virrey 115, Monserrat</p>
                             <p>Ciudad Autónoma de Buenos Aires</p>
                         </div>
                     </div>
