--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="facebook-domain-verification" content="iuhjpa5uv6wnq6euwq2rb1qjf8k4w6" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALPORTEL - Empresa Agrícola</title>
+    <title>ALPORTEL SRL - Empresa Agrícola</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="styles.css">
 </head>
