--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </svg>
                 </div>
                 <div class="logo-text">
-                    <div class="logo">ALPORTEL</div>
+                    <div class="logo">ALPORTEL SRL</div>
                     <div class="nav-tagline">Cultivando el futuro</div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                 <h2>Quiénes Somos</h2>
                 <div class="title-underline"></div>
             </div>
-            <p class="lead">ALPORTEL es una empresa agrícola argentina dedicada a la producción y comercialización de soja, cereales y oleaginosas. Con años de experiencia en el sector agropecuario, nos consolidamos como un referente en la región pampeana.</p>
+            <p class="lead">ALPORTEL SRL es una empresa agrícola argentina dedicada a la producción y comercialización de soja, cereales y oleaginosas. Con años de experiencia en el sector agropecuario, nos consolidamos como un referente en la región pampeana.</p>
             <p>Nuestro compromiso con la excelencia operativa y la sustentabilidad nos permite ofrecer productos de la más alta calidad, mientras cuidamos el recurso más valioso: la tierra.</p>
         </div>
     </section>
@@ -259,7 +259,7 @@
                                 <circle cx="25" cy="20" r="3" fill="currentColor"/>
                             </svg>
                         </div>
-                        <div class="footer-logo">ALPORTEL</div>
+                        <div class="footer-logo">ALPORTEL SRL</div>
                     </div>
                     <p class="footer-tagline">Cultivando el futuro</p>
                 </div>
