--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 </div>
 
                 <div class="footer-bottom">
-                    <p class="footer-text">&copy; 2024 ALPORTEL. Todos los derechos reservados.</p>
+                    <p class="footer-text">&copy; 2024 ALPORTEL SRL. Todos los derechos reservados.</p>
                 </div>
             </div>
         </div>
