--- a/politica-de-privacidad/index.html
+++ b/politica-de-privacidad/index.html
@@ -1,51 +1,411 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Política de Privacidad - ALPORTEL</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <style>
+        :root {
+            --primary-green: #2d5016;
+            --secondary-green: #4a7c30;
+            --accent-gold: #daa520;
+            --bg-light: #f8f9fa;
+            --text-dark: #2c3e50;
+            --text-gray: #6c757d;
+        }
 
-ALPORTEL
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-Volver al inicio
-Política de Privacidad
-Última actualización: diciembre 2025
-Alportel SRL, con domicilio comercial en la República Argentina, es responsable del tratamiento de los datos personales que se recolectan a través de sus canales digitales, incluyendo su sitio web y su canal oficial de comunicación mediante WhatsApp Business API.   La presente Política de Privacidad tiene por objeto informar de manera clara y transparente cómo se recopilan, utilizan, almacenan y protegen los datos personales de los usuarios.
-1 Datos que se recopilan
-Podemos recopilar los siguientes datos personales:
-	•	Nombre y apellido
-	•	Número de teléfono
-	•	Dirección de correo electrónico
-	•	Dirección IP
-	•	Información de interacción con nuestros mensajes
-Los datos se recolectan únicamente cuando el usuario los proporciona de forma voluntaria al comunicarse con nuestros canales.
-2 Finalidad del tratamiento
-Los datos personales serán utilizados para:
-	•	Brindar atención comercial y soporte
-	•	Enviar información relacionada con nuestros servicios
-	•	Enviar notificaciones operativas
-	•	Cumplir con obligaciones legales
-Los datos no serán utilizados para finalidades distintas a las aquí indicadas.
-3 Uso de WhatsApp Business API
-Alportel SRL utiliza la plataforma WhatsApp Business API proporcionada por Meta Platforms Inc. para comunicarse con sus usuarios.
-El uso de WhatsApp está sujeto también a las Políticas de Privacidad de Meta.
-Alportel SRL no accede a información privada distinta a la necesaria para lograr la comunicación.
-4 Almacenamiento y seguridad
-Alportel SRL adopta todas las medidas técnicas y organizativas necesarias para proteger los datos personales contra accesos no autorizados, pérdida, modificación o divulgación indebida.
-Los datos se conservan únicamente durante el tiempo necesario para cumplir la finalidad para la cual fueron recolectados.
-5 Cesión de datos
-Los datos personales no serán cedidos, vendidos ni compartidos con terceros, excepto cuando exista obligación legal o requerimiento por parte de autoridades competentes.
-6 Derechos del usuario
-El usuario puede en cualquier momento ejercer los siguientes derechos:
-	•	Acceder a sus datos personales
-	•	Rectificar datos incorrectos
-	•	Solicitar la eliminación de sus datos
-	•	Limitar u oponerse al tratamiento
-Para ejercer estos derechos, puede contactarse por correo electrónico a: info@alportel-argentina.com
-7 Eliminación de datos
-El usuario podrá solicitar la eliminación total de sus datos personales enviando un correo electrónico a info@alportel-argentina.com con el asunto "Eliminación de Datos".
-La solicitud será procesada dentro de un plazo máximo de 10 días hábiles.
-8 Cambios en esta política
-Alportel SRL se reserva el derecho de modificar esta Política de Privacidad en cualquier momento. Las modificaciones entrarán en vigencia desde su publicación.
-9 Contacto
-Para cualquier consulta relacionada con esta Política de Privacidad, puede comunicarse a:
-Información de Contacto
-Correo: info@alportel-argentina.com
-Empresa: Alportel SRL
-País: Argentina
-Al utilizar nuestros servicios, el usuario acepta expresamente esta Política de Privacidad.
-© 2024 ALPORTEL SRL. Todos los derechos reservados.
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.8;
+            color: var(--text-dark);
+            background: var(--bg-light);
+        }
+
+        /* Header */
+        .header {
+            background: var(--primary-green);
+            color: white;
+            padding: 1.5rem 2rem;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+
+        .header-container {
+            max-width: 1000px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            text-decoration: none;
+            color: white;
+        }
+
+        .logo-icon {
+            width: 40px;
+            height: 40px;
+            color: var(--accent-gold);
+        }
+
+        .logo-icon svg {
+            width: 100%;
+            height: 100%;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            letter-spacing: 2px;
+        }
+
+        .back-link {
+            color: var(--accent-gold);
+            text-decoration: none;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .back-link:hover {
+            color: white;
+        }
+
+        /* Main Content */
+        .main-content {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 3rem 2rem;
+        }
+
+        .policy-container {
+            background: white;
+            border-radius: 12px;
+            padding: 3rem;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.08);
+        }
+
+        .policy-title {
+            font-size: 2.5rem;
+            color: var(--primary-green);
+            margin-bottom: 0.5rem;
+            text-align: center;
+        }
+
+        .policy-date {
+            text-align: center;
+            color: var(--text-gray);
+            font-size: 0.95rem;
+            margin-bottom: 2rem;
+            padding-bottom: 2rem;
+            border-bottom: 2px solid var(--bg-light);
+        }
+
+        .policy-intro {
+            font-size: 1.05rem;
+            margin-bottom: 2rem;
+            padding: 1.5rem;
+            background: linear-gradient(135deg, rgba(45, 80, 22, 0.05), rgba(218, 165, 32, 0.05));
+            border-radius: 8px;
+            border-left: 4px solid var(--accent-gold);
+        }
+
+        .section {
+            margin-bottom: 2rem;
+        }
+
+        .section-title {
+            font-size: 1.4rem;
+            color: var(--primary-green);
+            margin-bottom: 1rem;
+            display: flex;
+            align-items: center;
+            gap: 0.7rem;
+        }
+
+        .section-number {
+            background: var(--accent-gold);
+            color: white;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.95rem;
+            font-weight: bold;
+        }
+
+        .section p {
+            margin-bottom: 1rem;
+            color: var(--text-dark);
+        }
+
+        .section ul {
+            margin: 1rem 0 1rem 1.5rem;
+            color: var(--text-dark);
+        }
+
+        .section ul li {
+            margin-bottom: 0.5rem;
+            position: relative;
+            padding-left: 0.5rem;
+        }
+
+        .section ul li::marker {
+            color: var(--accent-gold);
+        }
+
+        .highlight-box {
+            background: var(--bg-light);
+            padding: 1.2rem 1.5rem;
+            border-radius: 8px;
+            margin: 1rem 0;
+        }
+
+        .email-link {
+            color: var(--secondary-green);
+            font-weight: 600;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .email-link:hover {
+            color: var(--accent-gold);
+        }
+
+        .contact-box {
+            background: linear-gradient(135deg, var(--primary-green), var(--secondary-green));
+            color: white;
+            padding: 2rem;
+            border-radius: 12px;
+            margin-top: 2rem;
+        }
+
+        .contact-box h3 {
+            color: var(--accent-gold);
+            margin-bottom: 1rem;
+            font-size: 1.3rem;
+        }
+
+        .contact-box p {
+            margin-bottom: 0.5rem;
+            color: rgba(255,255,255,0.9);
+        }
+
+        .acceptance-note {
+            margin-top: 2rem;
+            padding: 1.5rem;
+            background: rgba(218, 165, 32, 0.1);
+            border-radius: 8px;
+            text-align: center;
+            font-weight: 500;
+            color: var(--primary-green);
+            border: 2px dashed var(--accent-gold);
+        }
+
+        /* Footer */
+        .footer {
+            background: var(--primary-green);
+            color: white;
+            text-align: center;
+            padding: 1.5rem;
+            margin-top: 2rem;
+        }
+
+        .footer p {
+            color: rgba(255,255,255,0.7);
+            font-size: 0.9rem;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            .policy-container {
+                padding: 2rem 1.5rem;
+            }
+
+            .policy-title {
+                font-size: 2rem;
+            }
+
+            .section-title {
+                font-size: 1.2rem;
+            }
+
+            .header-container {
+                flex-direction: column;
+                gap: 1rem;
+            }
+        }
+    </style>
+</head>
+<body>
+    <!-- Header -->
+    <header class="header">
+        <div class="header-container">
+            <a href="index.html" class="logo-container">
+                <div class="logo-icon">
+                    <svg viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M25 5 L25 20 M15 10 L20 15 M35 10 L30 15" stroke="currentColor" stroke-width="2" fill="none"/>
+                        <path d="M25 20 Q15 25 15 35 L15 45" stroke="currentColor" stroke-width="2" fill="none"/>
+                        <path d="M25 20 Q25 25 25 35 L25 45" stroke="currentColor" stroke-width="2" fill="none"/>
+                        <path d="M25 20 Q35 25 35 35 L35 45" stroke="currentColor" stroke-width="2" fill="none"/>
+                        <circle cx="25" cy="20" r="3" fill="currentColor"/>
+                    </svg>
+                </div>
+                <span class="logo">ALPORTEL</span>
+            </a>
+            <a href="index.html" class="back-link">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M19 12H5M12 19l-7-7 7-7"/>
+                </svg>
+                Volver al inicio
+            </a>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <main class="main-content">
+        <div class="policy-container">
+            <h1 class="policy-title">Política de Privacidad</h1>
+            <p class="policy-date">Última actualización: diciembre 2025</p>
+
+            <p class="policy-intro">
+                Alportel SRL, con domicilio comercial en la República Argentina, es responsable del tratamiento de los datos personales que se recolectan a través de sus canales digitales, incluyendo su sitio web y su canal oficial de comunicación mediante WhatsApp Business API.
+                <br><br>
+                La presente Política de Privacidad tiene por objeto informar de manera clara y transparente cómo se recopilan, utilizan, almacenan y protegen los datos personales de los usuarios.
+            </p>
+
+            <div class="section">
+                <h2 class="section-title">
+                    <span class="section-number">1</span>
+                    Datos que se recopilan
+                </h2>
+                <p>Podemos recopilar los siguientes datos personales:</p>
+                <ul>
+                    <li>Nombre y apellido</li>
+                    <li>Número de teléfono</li>
+                    <li>Dirección de correo electrónico</li>
+                    <li>Dirección IP</li>
+                    <li>Información de interacción con nuestros mensajes</li>
+                </ul>
+                <p>Los datos se recolectan únicamente cuando el usuario los proporciona de forma voluntaria al comunicarse con nuestros canales.</p>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">
+                    <span class="section-number">2</span>
+                    Finalidad del tratamiento
+                </h2>
+                <p>Los datos personales serán utilizados para:</p>
+                <ul>
+                    <li>Brindar atención comercial y soporte</li>
+                    <li>Enviar información relacionada con nuestros servicios</li>
+                    <li>Enviar notificaciones operativas</li>
+                    <li>Cumplir con obligaciones legales</li>
+                </ul>
+                <p>Los datos no serán utilizados para finalidades distintas a las aquí indicadas.</p>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">
+                    <span class="section-number">3</span>
+                    Uso de WhatsApp Business API
+                </h2>
+                <p>Alportel SRL utiliza la plataforma WhatsApp Business API proporcionada por Meta Platforms Inc. para comunicarse con sus usuarios.</p>
+                <p>El uso de WhatsApp está sujeto también a las Políticas de Privacidad de Meta.</p>
+                <p>Alportel SRL no accede a información privada distinta a la necesaria para lograr la comunicación.</p>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">
+                    <span class="section-number">4</span>
+                    Almacenamiento y seguridad
+                </h2>
+                <p>Alportel SRL adopta todas las medidas técnicas y organizativas necesarias para proteger los datos personales contra accesos no autorizados, pérdida, modificación o divulgación indebida.</p>
+                <p>Los datos se conservan únicamente durante el tiempo necesario para cumplir la finalidad para la cual fueron recolectados.</p>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">
+                    <span class="section-number">5</span>
+                    Cesión de datos
+                </h2>
+                <p>Los datos personales no serán cedidos, vendidos ni compartidos con terceros, excepto cuando exista obligación legal o requerimiento por parte de autoridades competentes.</p>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">
+                    <span class="section-number">6</span>
+                    Derechos del usuario
+                </h2>
+                <p>El usuario puede en cualquier momento ejercer los siguientes derechos:</p>
+                <ul>
+                    <li>Acceder a sus datos personales</li>
+                    <li>Rectificar datos incorrectos</li>
+                    <li>Solicitar la eliminación de sus datos</li>
+                    <li>Limitar u oponerse al tratamiento</li>
+                </ul>
+                <div class="highlight-box">
+                    <p>Para ejercer estos derechos, puede contactarse por correo electrónico a: <a href="mailto:info@alportel-argentina.com" class="email-link">info@alportel-argentina.com</a></p>
+                </div>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">
+                    <span class="section-number">7</span>
+                    Eliminación de datos
+                </h2>
+                <p>El usuario podrá solicitar la eliminación total de sus datos personales enviando un correo electrónico a <a href="mailto:info@alportel-argentina.com" class="email-link">info@alportel-argentina.com</a> con el asunto "Eliminación de Datos".</p>
+                <p>La solicitud será procesada dentro de un plazo máximo de 10 días hábiles.</p>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">
+                    <span class="section-number">8</span>
+                    Cambios en esta política
+                </h2>
+                <p>Alportel SRL se reserva el derecho de modificar esta Política de Privacidad en cualquier momento. Las modificaciones entrarán en vigencia desde su publicación.</p>
+            </div>
+
+            <div class="section">
+                <h2 class="section-title">
+                    <span class="section-number">9</span>
+                    Contacto
+                </h2>
+                <p>Para cualquier consulta relacionada con esta Política de Privacidad, puede comunicarse a:</p>
+                <div class="contact-box">
+                    <h3>Información de Contacto</h3>
+                    <p><strong>Correo:</strong> info@alportel-argentina.com</p>
+                    <p><strong>Empresa:</strong> Alportel SRL</p>
+                    <p><strong>País:</strong> Argentina</p>
+                </div>
+            </div>
+
+            <div class="acceptance-note">
+                Al utilizar nuestros servicios, el usuario acepta expresamente esta Política de Privacidad.
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2024 ALPORTEL SRL. Todos los derechos reservados.</p>
+    </footer>
+</body>
+</html>
